--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
             </div>
           </form>
           <div id="loading">
-            <img src="img/loading.gif" alt="">
+            <!-- <img src="img/loading.gif" alt=""> -->
           </div>
+  
           <div id="results" class="pt-4">
             <h5>Results</h5>
             <div class="form-group">
@@ -74,7 +75,18 @@
                   disabled
                   type="number"
                   class="form-control"
-                  id="montly-payment"
+                  id="monthly-payment"
+                />
+              </div>
+            </div>
+            <div class="form-group">
+              <div class="input-group">
+                <span class="input-group-text">Montly Payment</span>
+                <input
+                  disabled
+                  type="number"
+                  class="form-control"
+                  id="total-payment"
                 />
               </div>
             </div>
@@ -109,5 +121,6 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"
     ></script>
+    <script src="app.js"></script>
   </body>
 </html>
