--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+    <style>
+      #loading, #results {
+        display: none;
 
+      }
+    </style>
     <title>Hello, world!</title>
   </head>
   <body class="bg-dark">
@@ -63,9 +68,9 @@
             </div>
           </form>
           <div id="loading">
-            <!-- <img src="img/loading.gif" alt=""> -->
+            <img src="img/loading.gif" alt="" />
           </div>
-  
+
           <div id="results" class="pt-4">
             <h5>Results</h5>
             <div class="form-group">
@@ -81,7 +86,7 @@
             </div>
             <div class="form-group">
               <div class="input-group">
-                <span class="input-group-text">Montly Payment</span>
+                <span class="input-group-text">Total Payment</span>
                 <input
                   disabled
                   type="number"
